@startuml PaymentGatewayAdapter

skinparam class {
    BackgroundColor<<Target>> LightGreen
    BackgroundColor<<Adapter>> LightBlue
    BackgroundColor<<Adaptee>> LightYellow
}

interface ExternalPaymentGateway <<Target>> {
  + processPayment(amount: double): boolean
}

class CreditCardAdapter <<Adapter>> {
  - creditCardApi: CreditCardApi
  - cardNumber: String
  - expiryDate: String
  - cvv: String
  + processPayment(amount: double): boolean
}

class PayPalAdapter <<Adapter>> {
  - payPalApi: PayPalApi
  - userPayPalEmail: String
  + processPayment(amount: double): boolean
}

class CreditCardApi <<Adaptee>> {
  + chargeCreditCard(cardNumber: String, expiry: String, cvv: String, amount: double): boolean
}

class PayPalApi <<Adaptee>> {
  + sendPayment(email: String, totalAmount: double): void
}

ExternalPaymentGateway <|-- CreditCardAdapter
ExternalPaymentGateway <|-- PayPalAdapter

CreditCardAdapter o--> CreditCardApi
PayPalAdapter o--> PayPalApi

note right of ExternalPaymentGateway
  <<interface>>
  Standard interface that client
  code expects to work with
end note

note bottom of CreditCardAdapter
  Adapts the CreditCardApi to the
  ExternalPaymentGateway interface
end note

note bottom of PayPalAdapter
  Adapts the PayPalApi to the
  ExternalPaymentGateway interface
end note

@enduml